# cli-api

./: docker-compose.yml
cli-backend/: README.md  default.blend  dockerfile  gen.py  main.py  pyproject.toml  render.py
cli-frontend/: dockerfile  main.py  pyproject.toml
cli-frontend/templates/: ui.html
