[tool.poetry]
name = "cli-backend"
version = "0.1.0"
description = ""
authors = ["Matthias Pueski <matthias@pueski.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
