[tool.poetry]
name = "cli-frontend"
version = "0.1.0"
description = ""
authors = ["Matthias Pueski <matthias@pueski.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
python-multipart = "^0.0.20"
flask = "^3.1.0"
requests = "^2.32.3"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
